Add to cSpell.words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Codepen",
         "daisyui",
-        "tailwindcss"
+        "tailwindcss",
+        "Traversy"
     ]
 }
